[package]
name = "majority-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
itertools = "*"
majority = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
serenity = { version = "*", default-features = false, features = [
	"cache",
	"model",
	"builder",
	"client",
	"gateway",
	"http",
	"utils",
	"rustls_backend",
] }
log = "*"
env_logger = "*"
confy = "*"
lazy_static = "*"
rusqlite = { version = "*", features = ["bundled"] }
serde = "*"
serenity-utils = { git = "https://github.com/Inspirateur/serenity-utils.git" }